# Paper-Clip

./: Paper-Clip.doap  README.md  io.github.diegoivan.hidden_scribe.json  io.github.diegoivan.pdf_metadata_editor.json  meson.build  meson_options.txt  pdf-metadata-editor.doap
data/: io.github.diegoivan.hidden_scribe.appdata.xml.in  io.github.diegoivan.hidden_scribe.desktop.in  io.github.diegoivan.hidden_scribe.gschema.xml  io.github.diegoivan.pdf_metadata_editor.appdata.xml.in  io.github.diegoivan.pdf_metadata_editor.desktop.in  io.github.diegoivan.pdf_metadata_editor.gschema.xml  io.github.diegoivan.pdf_metadata_editor.metainfo.xml.in  io.github.diegoivan.pdf_metadata_editor.service.in  meson.build
data/icons/: meson.build
data/nautilus-extension/: paper-clip.py
po/: LINGUAS  POTFILES  bg.po  cs.po  de.po  es.po  eu.po  fr.po  he.po  hi.po  hr.po  it.po  meson.build  nb.po  nl.po  oc.po  pdf-metadata-editor.pot  pdf_metadata_editor.pot  pl.po  pt_Br.po  ru.po  tr.po  uk.po  zh_CN.po
src/: DateRow.vala  DetailRow.vala  DetailsList.vala  DetailsWindow.vala  Document.vala  DocumentThumbnail.vala  DocumentView.vala  DropOverlay.vala  EntryRow.vala  KeywordList.vala  KeywordRow.vala  PasswordDialog.vala  PropertyRow.vala  SaveChangesDialog.vala  StringArrayRow.vala  ThreadManager.vala  application.vala  hidden-scribe.gresource.xml  main.vala  meson.build  pdf-metadata-editor.gresource.xml  style.css  window.ui  window.vala
src/Models/: AgentName.vala  AsyncTask.vala
src/Services/: DocManager.vala  DocumentManager.vala  Thumbnailer.vala
src/gtk/: date-row.ui  details-list.ui  details-window.ui  document-view.ui  keyword-list.ui  password-dialog.ui  save-changes-dialog.ui  shortcut-window.ui
tests/: agent-name-test.vala  meson.build
vapi/: Config.vapi  exempi-2.0.vapi
